Issue #55: When comments are too long, another textarea line is necessary * closes #55

--- a/front-end/src/main/resources/static/css/style.css
+++ b/front-end/src/main/resources/static/css/style.css
@@ -1,3 +1,7 @@
+.posts-wrapper textarea {
+    overflow-y: hidden;
+}
+
 .error-page {
     max-width: 100%;
     text-align: center;
